--- a/client/src/components/pages/Login.css
+++ b/client/src/components/pages/Login.css
@@ -6,7 +6,6 @@
   height: 100vh;
   width: 100vw;
   padding: 0 var(--xs); /* Add padding for responsiveness */
-  overflow: hidden;
 
   background-color: var(--light--brown);
 
@@ -14,6 +13,13 @@
   box-sizing: border-box; /* Ensures padding and border don't affect the layout */
 
   box-shadow: inset 0 0 var(--xs) rgba(0, 0, 0, 0.3); /* Adjust as needed */
+
+  overflow-y: auto;
+  scroll-behavior: smooth;
+}
+
+.login-container::-webkit-scrollbar {
+  display: none; /* This hides the scrollbar */
 }
 
 /* Styling for the title container */
@@ -64,42 +70,55 @@
 
   color: var(--beige);
   margin: 0;
+  border-right: 0.15vw solid var(--beige);
 
   overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: 0.25vw solid var(--beige); /* The typewriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   animation:
     typeEraseLoop 6s steps(15) infinite,
-    blink-caret 1s steps(1) infinite;
+    blinking 6s step-end infinite;
 }
 
 /* The typing effect */
 @keyframes typeEraseLoop {
   0% {
-    clip-path: inset(0 100% 0 0);
+    width: 0%;
   }
   15% {
-    clip-path: inset(0 0 0 0);
+    width: 50%;
   }
-  65% {
-    clip-path: inset(0 0 0 0);
+  75% {
+    width: 50%;
   }
-  80% {
-    clip-path: inset(0 100% 0 0);
+  90% {
+    width: 0%;
   }
   100% {
-    clip-path: inset(0 100% 0 0);
+    width: 0%;
   }
 }
 
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  0%,
-  100% {
-    border-color: transparent;
+@keyframes blinking {
+  0% {
+    border-right: 0.15vw solid var(--beige);
+  }
+  23% {
+    border-right: 0.15vw solid transparent;
+  }
+  32% {
+    border-right: 0.15vw solid var(--beige);
+  }
+  41% {
+    border-right: 0.15vw solid transparent;
   }
   50% {
-    border-color: var(--beige);
+    border-right: 0.15vw solid var(--beige);
+  }
+  59% {
+    border-right: 0.15vw solid transparent;
+  }
+  68% {
+    border-right: 0.15vw solid var(--beige);
   }
 }
 
